samples/_failures_safe/1761484557_751626_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_463d58e9.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_463d58e9.c:126:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  126 |     uint32_t line_number
      |     ^~~~~~~~
./samples/SAFE/__tmp_463d58e9.c:126:5: error: expected declaration or statement at end of input
